Version bump to 23.10.1